docs/模组/fabric/1.16.5/辅助类/优化补丁.md
# 优化补丁

## 重量级

### 重量级：综合

| 英文名（CurseForge）                                                                                    | 中文名（MCMOD）                                    | 相关链接                                                   | 备注             |
| ------------------------------------------------------------------------------------------------------- | -------------------------------------------------- | ---------------------------------------------------------- | ---------------- |
| [Lithium (Fabric)](https://www.curseforge.com/minecraft/mc-mods/lithium)                                | [锂](https://www.mcmod.cn/class/2292.html)         | [Modrinth](https://www.modrinth.com/mod/lithium)           | 计算方法优化     |
| Hydrogen                                                                                                | [氢](https://www.mcmod.cn/class/3406.html)         | [Modrinth](https://www.modrinth.com/mod/hydrogen)          |                  |
| [FerriteCore (Fabric)](https://www.curseforge.com/minecraft/mc-mods/ferritecore-fabric)                 | [铁氧体磁芯](https://www.mcmod.cn/class/3888.html) | [Modrinth](https://www.modrinth.com/mod/ferrite-core)      | 减少内存占用     |
| [Smooth Boot (Fabric)](https://www.curseforge.com/minecraft/mc-mods/smooth-boot)                        | [流畅加载](https://www.mcmod.cn/class/3422.html)   | [Modrinth](https://www.modrinth.com/mod/smoothboot-fabric) | 优化游戏加载时间 |
| [Krypton](https://www.curseforge.com/minecraft/mc-mods/krypton)                                         | [氪](https://www.mcmod.cn/class/3399.html)         | [Modrinth](https://www.modrinth.com/mod/krypton)           | 优化网络堆栈     |
| [Concurrent Chunk Management Engine (Fabric)](https://www.curseforge.com/minecraft/mc-mods/c2me-fabric) | [C^2M 引擎](https://www.mcmod.cn/class/3511.html)  | [Modrinth](https://modrinth.com/mod/c2me-fabric)           | 提高区块的性能   |

### 重量级：渲染

| 英文名（CurseForge）                                                                                    | 中文名（MCMOD）                                           | 相关链接                                                        | 备注         |
| ------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- | --------------------------------------------------------------- | ------------ |
| [Sodium](https://www.curseforge.com/minecraft/mc-mods/sodium)                                           | [钠](https://www.mcmod.cn/class/2785.html)                | [Modrinth](https://www.modrinth.com/mod/sodium)                 | 渲染引擎优化 |
| > [Indium](https://www.curseforge.com/minecraft/mc-mods/indium)                                         | [铟](https://www.mcmod.cn/class/3413.html)                | [Modrinth](https://www.modrinth.com/mod/indium)                 |              |
| > [Sodium Shadowy Path Blocks](https://www.curseforge.com/minecraft/mc-mods/sodium-shadowy-path-blocks) | [钠 · 土径阴影](https://www.mcmod.cn/class/5654.html)     | [Modrinth](https://modrinth.com/mod/sodium-shadowy-path-blocks) |              |
| > [Sodium Extra](https://www.curseforge.com/minecraft/mc-mods/sodium-extra)                             | [钠 · 扩展](https://www.mcmod.cn/class/3701.html)         | [Modrinth](https://www.modrinth.com/mod/sodium-extra)           |              |
| > [Reese's Sodium Options](https://www.curseforge.com/minecraft/mc-mods/reeses-sodium-options)          | [Reese的钠视频界面](https://www.mcmod.cn/class/4905.html) | [Modrinth](https://modrinth.com/mod/reeses-sodium-options)      |              |
| [Iris Shaders](https://www.curseforge.com/minecraft/mc-mods/irisshaders)                                | [Iris Shaders](https://www.mcmod.cn/class/3697.html)      | [Modrinth](https://www.modrinth.com/mod/iris)                   |              |

### 重量级：光照

| 英文名（CurseForge）                                                         | 中文名（MCMOD）                              | 相关链接                                           | 备注             |
| ---------------------------------------------------------------------------- | -------------------------------------------- | -------------------------------------------------- | ---------------- |
| [Starlight (Fabric)](https://www.curseforge.com/minecraft/mc-mods/starlight) | [星光](https://www.mcmod.cn/class/3303.html) | [Modrinth](https://www.modrinth.com/mod/starlight) | 重写原版光照系统 |
| [Phosphor (Fabric)](https://www.curseforge.com/minecraft/mc-mods/phosphor)   | [磷](https://www.mcmod.cn/class/1766.html)   | [Modrinth](https://www.modrinth.com/mod/phosphor)  | 照明引擎优化     |

## 轻量级

### 轻量级：综合

| 英文名（CurseForge）                                                                           | 中文名（MCMOD）                                            | 相关链接                                                  | 备注                              |
| ---------------------------------------------------------------------------------------------- | ---------------------------------------------------------- | --------------------------------------------------------- | --------------------------------- |
| [Not Enough Crashes (Fabric)](https://www.curseforge.com/minecraft/mc-mods/not-enough-crashes) | [崩溃优化](https://www.mcmod.cn/class/2441.html)           | [Modrinth](https://modrinth.com/mod/notenoughcrashes)     |                                   |
| [LazyDFU](https://www.curseforge.com/minecraft/mc-mods/lazydfu)                                | [DFU载入优化](https://www.mcmod.cn/class/3407.html)        | [Modrinth](https://www.modrinth.com/mod/lazydfu)          |                                   |
| [CustomSkinLoader](https://www.curseforge.com/minecraft/mc-mods/customskinloader)              | [万用皮肤补丁](https://www.mcmod.cn/class/883.html)        | [Modrinth](https://modrinth.com/mod/customskinloader)     |                                   |
| [Better Biome Blend](https://www.curseforge.com/minecraft/mc-mods/better-biome-blend)          | [Better Biome Blend](https://www.mcmod.cn/class/6107.html) | [Modrinth](https://modrinth.com/mod/better-biome-blend)   | 生物群系过渡算法优化              |
| [Alternate Current](https://www.curseforge.com/minecraft/mc-mods/alternate-current)            |                                                            | [Modrinth](https://modrinth.com/mod/alternate-current)    | 红石粉优化                        |
| [Ksyxis](https://www.curseforge.com/minecraft/mc-mods/ksyxis)                                  | [Ksyxis](https://www.mcmod.cn/class/5104.html)             | [Modrinth](https://modrinth.com/mod/ksyxis)               | 加载地图时不加载原版的 441 个区块 |
| Hopper Optimizations                                                                           |                                                            | [GitHub](https://github.com/2No2Name/hopperOptimizations) | 漏斗优化                          |
| [Overworld Two](https://www.curseforge.com/minecraft/mc-mods/overworld-two)                    | [Overworld Two](https://www.mcmod.cn/class/4558.html)      |                                                           | 专门优化的主世界                  |

### 轻量级：修复

| 英文名（CurseForge）                                                                | 中文名（MCMOD） | 相关链接 | 备注                   |
| ----------------------------------------------------------------------------------- | --------------- | -------- | ---------------------- |
| [XL Packets Fabric](https://www.curseforge.com/minecraft/mc-mods/xl-packets-fabric) |                 |          | 包大小限制提升到 2GB   |
| [Angerable Patch](https://www.curseforge.com/minecraft/mc-mods/angerable-patch)     |                 |          | 修复日志文件过大的问题 |

### 轻量级：配方

| 英文名（CurseForge）                                                                            | 中文名（MCMOD）                                                | 相关链接 | 备注               |
| ----------------------------------------------------------------------------------------------- | -------------------------------------------------------------- | -------- | ------------------ |
| [FastBench for Fabric](https://www.curseforge.com/minecraft/mc-mods/fastbench-for-fabric)       | [工作台性能优化Fabric版](https://www.mcmod.cn/class/5403.html) |          |                    |
| [Fast Furnace for Fabric](https://www.curseforge.com/minecraft/mc-mods/fast-furnace-for-fabric) | [熔炉性能优化Fabric版](https://www.mcmod.cn/class/3079.html)   |          |                    |
| [Recipe Cache](https://www.curseforge.com/minecraft/mc-mods/recipe-cache)                       |                                                                |          | 与上面这两个不兼容 |

### 轻量级：渲染

| 英文名（CurseForge）                                                                      | 中文名（MCMOD）                                          | 相关链接                                               | 备注               |
| ----------------------------------------------------------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------ | ------------------ |
| [Entity Culling Fabric/Forge](https://www.curseforge.com/minecraft/mc-mods/entityculling) | [实体渲染机制优化](https://www.mcmod.cn/class/3629.html) |                                                        |                    |
| [Item Model Fix (Fabric)](https://www.curseforge.com/minecraft/mc-mods/item-model-fix)    | [物品模型修复](https://www.mcmod.cn/class/3845.html)     |                                                        |                    |
| [Cull Leaves](https://www.curseforge.com/minecraft/mc-mods/cull-leaves)                   | [树叶渲染优化](https://www.mcmod.cn/class/4414.html)     | [Modrinth](https://www.modrinth.com/mod/cull-leaves)   |                    |
| [Better Beds](https://www.curseforge.com/minecraft/mc-mods/better-beds)                   | [更好的床](https://www.mcmod.cn/class/4356.html)         | [Modrinth](https://modrinth.com/mod/better-beds)       |                    |
| [Smoke Suppression](https://www.curseforge.com/minecraft/mc-mods/smoke-suppression)       |                                                          | [Modrinth](https://modrinth.com/mod/smoke-suppression) | 大量篝火造成的延迟 |

## 试验性

| 英文名（CurseForge）                                                  | 中文名（MCMOD）                                  | 相关链接                                                          | 备注       |
| --------------------------------------------------------------------- | ------------------------------------------------ | ----------------------------------------------------------------- | ---------- |
| [DashLoader](https://www.curseforge.com/minecraft/mc-mods/dashloader) | [疾速加载](https://www.mcmod.cn/class/3841.html) | [Modrinth](https://modrinth.com/mod/dashloader)                   |            |
| Dimensional Threading                                                 |                                                  | [GitHub](https://github.com/WearBlackAllDay/DimensionalThreading) | 维度线程化 |
